Removed the document class and adjusted the directory to mean the relative directory

--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -1,4 +1,3 @@
-\documentclass[letterpaper, 11pt]{article}
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{amssymb}
@@ -25,5 +24,4 @@
 % Listings
 \usepackage{listings}
 \usepackage{color}
-\input{lst_style.tex}
-
+\input{./ltx_core/lst_style.tex}
