Added two more definitiosn for new_command

--- a/new_cmds.tex
+++ b/new_cmds.tex
@@ -16,4 +16,5 @@
 \newcommand{\adj}{\text{adj}}
 \newcommand{\mol}[1]{\{#1\}}
 \newcommand{\con}[1]{[#1]}
-
+\newcommand{\abs}[1]{\norm{#1}}
+\newcommand{\sat}{\text{sat}}
