Added another package for in parageraph lists

--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -19,6 +19,7 @@
 \usepackage{mathtools}
 \usepackage{hyperref}
 \hypersetup{ colorlinks=false }
+\usepackage{paralist}
 
 % Listings
 \usepackage{listings}
