Changed \bm to provide command as it is sometimes defined.

--- a/new_cmds.tex
+++ b/new_cmds.tex
@@ -1,22 +1,22 @@
 % NewCommands
 \newcommand{\peq}{ \mathrel{+}= }
 \newcommand{\muleq}{ \mathrel{*}= }
-\providecommand{\sign}{ \text{sign}}
-\newcommand{\bm}[1]{\begin{bmatrix} #1 \end{bmatrix}}
+\newcommand{\sign}{ \text{sign}}
+\providecommand{\bm}[1]{\begin{bmatrix} #1 \end{bmatrix}}
 \newcommand{\mat}[1]{\begin{matrix} #1 \end{matrix}}
 \newcommand{\lx}[2]{\leftindex #1 {#2}}
-\providecommand{\norm}[1]{\left\lvert #1 \right\rvert}
+\newcommand{\norm}[1]{\left\lvert #1 \right\rvert}
 \newcommand{\itbf}[1]{\noindent\textit{\textbf{#1}}}
 \newcommand{\mdet}[1]{\norm{\begin{matrix} #1 \end{matrix}}}
-\providecommand{\pbox}[1]{\fbox{\begin{minipage}{\textwidth} #1 \end{minipage}}}
+\newcommand{\pbox}[1]{\fbox{\begin{minipage}{\textwidth} #1 \end{minipage}}}
 \newcommand{\lstln}[1]{\lstinline|#1|}
 \newcommand{\lr}[1]{\left( #1 \right)}
 \newcommand{\lrb}[1]{\left[ #1 \right]}
 \newcommand{\lrf}[1]{\left\{ #1 \right\}}
-\providenewcommand{\adj}{\text{adj}}
+\newcommand{\adj}{\text{adj}}
 \newcommand{\mol}[1]{\{#1\}}
 \newcommand{\con}[1]{[#1]}
-\providenewcommand{\abs}[1]{\norm{#1}}
+\newcommand{\abs}[1]{\norm{#1}}
 \newcommand{\sat}{\text{sat}}
 \newcommand{\kron}{\otimes}
 %%===
