These work for the Purdue thesis cls

--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -3,7 +3,6 @@
 \usepackage{mathtools}
 \usepackage{amssymb}
 \usepackage{float}
-\usepackage{inputenc}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{caption}
@@ -26,3 +25,10 @@
 \usepackage{listings}
 \usepackage{color}
 \input{./ltx_core/lst_style.tex}
+
+
+% bibliography
+\usepackage[utf8]{inputenc}
+\usepackage[english]{babel}
+
+\usepackage{biblatex}
