Added packages for fancy header and

--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -20,6 +20,9 @@
 \usepackage{hyperref}
 \hypersetup{ colorlinks=false }
 \usepackage{paralist}
+\usepackage{fancybox,framed}
+\usepackage{indentfirst}
+
 
 % Listings
 \usepackage{listings}
