Added a macro for root

--- a/new_cmds.tex
+++ b/new_cmds.tex
@@ -19,4 +19,5 @@
 \providecommand{\abs}[1]{\norm{#1}}
 \newcommand{\sat}{\text{sat}}
 \newcommand{\kron}{\otimes}
+\newcommand{\froot}{.} % Root director for the files
 %%===
