Fontec package was missing

--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -22,7 +22,7 @@
 \usepackage{paralist}
 \usepackage{fancybox,framed}
 \usepackage{indentfirst}
-
+\usepackage[T1]{fontenc}
 
 % Listings
 \usepackage{listings}
