--- a/new_cmds.tex
+++ b/new_cmds.tex
@@ -5,7 +5,7 @@
 \providecommand{\bm}[1]{\begin{bmatrix} #1 \end{bmatrix}}
 \newcommand{\mat}[1]{\begin{matrix} #1 \end{matrix}}
 \newcommand{\lx}[2]{\leftindex #1 {#2}}
-\providecommand{\norm}[1]{\left\lvert #1 \right\rvert}
+\providecommand{\norm}[1]{\left\lVert #1 \right\rVert}
 \newcommand{\itbf}[1]{\noindent\textit{\textbf{#1}}}
 \newcommand{\mdet}[1]{\norm{\begin{matrix} #1 \end{matrix}}}
 \newcommand{\pbox}[1]{\fbox{\begin{minipage}{\textwidth} #1 \end{minipage}}}
@@ -16,7 +16,7 @@
 \providecommand{\adj}{\text{adj}}
 \newcommand{\mol}[1]{\{#1\}}
 \newcommand{\con}[1]{[#1]}
-\providecommand{\abs}[1]{\norm{#1}}
+\providecommand{\abs}[1]{\left\lvert #1 \right\rvert}
 \newcommand{\sat}{\text{sat}}
 \newcommand{\kron}{\otimes}
 \newcommand{\froot}{.} % Root director for the files
