added the commands for draft

--- a/std_page.tex
+++ b/std_page.tex
@@ -1,2 +1,7 @@
 \documentclass[letterpaper, 11pt]{article}
 \usepackage[left=2cm, right=2cm, top=2cm, bottom=2cm]{geometry}
+
+% For draftwatermark
+% \usepackage{draftwatermark}
+% \SetWatermarkText{DRAFT}
+% \SetWatermarkScale{1}
