added the commands to push title a bit up

--- a/std_page.tex
+++ b/std_page.tex
@@ -1,5 +1,7 @@
 \documentclass[letterpaper, 11pt]{article}
 \usepackage[left=2cm, right=2cm, top=2cm, bottom=2cm]{geometry}
+\usepackage{titling}
+\setlength{\droptitle}{-5em}
 
 % For draftwatermark
 % \usepackage{draftwatermark}
