so that I can directly copy the whole doc.

--- a/std_page.tex
+++ b/std_page.tex
@@ -3,6 +3,14 @@
 \usepackage{titling}
 \setlength{\droptitle}{-5em}
 
+\title{-}
+\author{Sesha Charla}
+\date{\today}
+
+\begin{document}
+\maketitle
+\end{document}
+
 % For draftwatermark
 % \usepackage{draftwatermark}
 % \SetWatermarkText{DRAFT}
