--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -32,9 +32,9 @@
 
 % bibliography
 \usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
+% \usepackage[english]{babel}
 
-\usepackage{biblatex}
+% \usepackage{biblatex}
 
 % DOC compatible pdfs
 \input{glyphtounicode}
