the input-ec is required.

--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -23,18 +23,12 @@
 \usepackage{fancybox,framed}
 \usepackage{indentfirst}
 \usepackage[T1]{fontenc}
+\usepackage[english]{inputenc}
 
 % Listings
 \usepackage{listings}
 \usepackage{color}
 \input{./ltx_core/lst_style.tex}
-
-
-% bibliography
-\usepackage[utf8]{inputenc}
-% \usepackage[english]{babel}
-
-% \usepackage{biblatex}
 
 % DOC compatible pdfs
 \input{glyphtounicode}
