the doc compatible lines dont work with asme journal stuff

--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -23,7 +23,7 @@
 \usepackage{fancybox,framed}
 \usepackage{indentfirst}
 \usepackage[T1]{fontenc}
-\usepackage[english]{inputenc}
+\usepackage{inputenc}
 
 % Listings
 \usepackage{listings}
@@ -31,5 +31,5 @@
 \input{./ltx_core/lst_style.tex}
 
 % DOC compatible pdfs
-\input{glyphtounicode}
-\pdfgentounicode=1
+% \input{glyphtounicode}
+% \pdfgentounicode=1
