--- a/ltx_pkgs.tex
+++ b/ltx_pkgs.tex
@@ -1,10 +1,9 @@
 \usepackage{amsmath}
 \setcounter{MaxMatrixCols}{20}
 \usepackage{mathtools}
-\usepackage{amssymb}
+% \usepackage{amssymb}
 \usepackage{float}
 \usepackage{graphicx}
-\usepackage{float}
 \usepackage{caption}
 \usepackage{extarrows}
 \usepackage{xcolor}
@@ -31,5 +30,5 @@
 \input{./ltx_core/lst_style.tex}
 
 % DOC compatible pdfs
-% \input{glyphtounicode}
-% \pdfgentounicode=1
+\input{glyphtounicode}
+\pdfgentounicode=1
